--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Rachel Gillespie</title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rachel Gillespie - Graphic Design Portfolio</title>
+    <link rel="stylesheet" href="style.css"> </head>
 <body>
+    <header>
+        <h1>Rachel Gillespie</h1>
+        <nav>
+            <ul>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<h1>Welcome!</h1>
-<p>This is a paragraph.</p>
+    <main>
+        <section id="hero">
+            </section>
 
-</body>
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="projects-grid">
+                </div>
+        </section>
+
+        <section id="resume">
+            <h2>Resume</h2>
+            </section>
+
+        <section id="about">
+            <h2>About Me</h2>
+            </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        </footer>
+
+    <script src="script.js"></script> </body>
 </html>
