--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Rachel Gillespie. All rights reserved.</p>
         </footer>
 
     <script src="script.js"></script> </body>
