--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 
     <main>
         <section id="hero">
-            </section>
+            <div class="hero-content">
+        <img src="images/your-photo.jpg" alt="Your Professional Photo">
+        <h1>Your Name</h1>
+        <p class="tagline">Crafting Compelling Visual Experiences</p>
+        <p class="introduction">Hello! I'm a graphic design student passionate about creating impactful and visually appealing designs. Explore my portfolio to see my latest projects.</p>
+        <a href="#projects" class="button">View My Projects</a>
+            </div>
+        </section>
 
         <section id="projects">
             <h2>Projects</h2>
