--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rachel Gillespie - Graphic Design Portfolio</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <title>Rachel Gillespie - Design Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <header>
         <h1>Rachel Gillespie</h1>
         <nav>
             <ul>
+                <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#resume">Resume</a></li>
-                <li><a href="#about">About Me</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -21,11 +21,33 @@
     <main>
         <section id="hero">
             <div class="hero-content">
-        <img src="images/your-photo.jpg" alt="Your Professional Photo">
-        <h1>Your Name</h1>
-        <p class="tagline">Crafting Compelling Visual Experiences</p>
-        <p class="introduction">Hello! I'm a graphic design student passionate about creating impactful and visually appealing designs. Explore my portfolio to see my latest projects.</p>
-        <a href="#projects" class="button">View My Projects</a>
+                <img src="images/your-photo.jpg" alt="Rachel Gillespie's Professional Photo">
+                <h1>Rachel Gillespie</h1>
+                <p class="introduction">I am enrolled in a BA (Hons) program in Visual Communications and Design at South East Technological University. In addition, I hold a BTEC Level 3 Diploma in Creative Media Production and a Professional Diploma in Graphic Design.</p>
+                <p class="introduction">I have a strong interest in design and technology, and I aim to pursue a career in digital design, UI/UX, or web and app design and development. I am passionate about and have experience in PC and console gaming.</p>
+                <p class="introduction">Over the past three years of studying Visual Communications, I have acquired various skills. I am proficient in Adobe Illustrator, Photoshop, InDesign, and XD, as well as web languages including HTML, CSS, JavaScript, PHP, and MySQL. Additionally, I have experience with Balsamiq and Figma. I have also completed three marketing modules: Introduction to Marketing, Marketing Mix, and Marketing Management.</p>
+                <div class="hero-buttons">
+                    <a href="#contact" class="button">Contact</a>
+                    <a href="#projects" class="button secondary">View My Work</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="services">
+            <h2>My Skills</h2>
+            <div class="services-grid">
+                <div class="service-item">
+                    <h3>Web Design and Development</h3>
+                    <p>Experienced in creating user-friendly and responsive websites using HTML, CSS, JavaScript, and more.</p>
+                </div>
+                <div class="service-item">
+                    <h3>UI/UX Design</h3>
+                    <p>Passionate about crafting intuitive and engaging user interfaces and seamless user experiences.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Brand Design</h3>
+                    <p>Skilled in developing visual identities that effectively communicate brand values and resonate with target audiences.</p>
+                </div>
             </div>
         </section>
 
@@ -50,7 +72,8 @@
 
     <footer>
         <p>&copy; 2025 Rachel Gillespie. All rights reserved.</p>
-        </footer>
+    </footer>
 
-    <script src="script.js"></script> </body>
+    <script src="script.js"></script>
+</body>
 </html>
