--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Rachel Gillespie</h1>
+        <li><a href="index.html"><h1>Rachel Gillespie</h1></a></li>
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
