--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><h1>Rachel Gillespie</h1></a>
+        <a href="https://rachel-gillespie.github.io/"><h1>Rachel Gillespie</h1></a>
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
