Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rachel Gillespie - Design Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');</style>
 </head>
 <body>
     <header>
