--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rachel Gillespie - Design Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <style> @import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');</style>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playball&display=swap');
+    </style>
 </head>
 <body>
     <header>
