--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <span class="logo-symbol"></span> © 2025 Rachel Gillespie. All rights reserved.
             </div>
             <div class="social-links">
-                <a href="#" target="_blank"><span class="linkedin-icon"></span></a>
+                <a href="images/InBug-White.png" target="_blank"><span class="linkedin-icon"></span></a>
             </div>
         </div>
     </footer>
