--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"></div>
+        <div class="logo">Rachel Gillespie</div>
         <nav>
             <ul>
                 <li><a href="#">About</a></li>
