--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="logo">Rachel Gillespie</div>
         <nav>
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="mailto:gillespierachel74@gmail.com">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +53,7 @@
                 <span class="logo-symbol"></span> © 2025 Rachel Gillespie. All rights reserved.
             </div>
             <div class="social-links">
-                <a href="images/InBug-White.png" target="_blank"><span class="linkedin-icon"></span></a>
+                <a href="https://www.linkedin.com/in/rachelgillespie/" target="_blank"><span class="linkedin-icon"></span></a>
             </div>
         </div>
     </footer>
