--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="gillespierachel74@gmail.com">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
