--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <h1>Welcome!</h1>
             <p>Visual Communications and Design Student Portfolio</p>
             <div class="hero-buttons">
-                <button class="contact-button"> <a href="contact.html">Contact</button>
-                <button class="view-work-button"> <a href="projects.html">View My Work</button>
+                <button class="contact-button" onclick="contact.html">Contact</button>
+                <button class="view-work-button" onclick="projects.html">View My Work</button>
             </div>
         </div>
     </section>
