--- a/projects.html
+++ b/projects.html
@@ -17,3 +17,47 @@
             </ul>
         </nav>
     </header>
+
+    <body>
+    <div class="container">
+        <h1>Portfolio</h1>
+        <div class="portfolio-grid">
+            <div class="grid-item">
+                <img src="image1.jpg" alt="Project 1">
+                <h3>Project Title 1</h3>
+                <p>A brief description of the project.</p>
+            </div>
+            <div class="grid-item">
+                <img src="image2.jpg" alt="Project 2">
+                <h3>Project Title 2</h3>
+                 <p>A brief description of the project.</p>
+            </div>
+             <div class="grid-item">
+                <img src="image3.jpg" alt="Project 3">
+                <h3>Project Title 3</h3>
+                <p>A brief description of the project.</p>
+            </div>
+            <div class="grid-item">
+                <img src="image4.jpg" alt="Project 4">
+                <h3>Project Title 4</h3>
+                <p>A brief description of the project.</p>
+            </div>
+            <div class="grid-item">
+                 <img src="image5.jpg" alt="Project 5">
+                <h3>Project Title 5</h3>
+                <p>A brief description of the project.</p>
+            </div>
+            <div class="grid-item">
+                <img src="image6.jpg" alt="Project 6">
+                <h3>Project Title 6</h3>
+                <p>A brief description of the project.</p>
+            </div>
+        </div>
+
+        <div class="reach-out">
+            <h2>Reach out</h2>
+            <p>Contact me for collaborations or inquiries.</p>
+        </div>
+    </div>
+</body>
+</html>
