--- a/about.html
+++ b/about.html
@@ -17,3 +17,36 @@
             </ul>
         </nav>
     </header>
+
+        <h1>About me</h1>
+
+
+    <section class="introduction">
+        <div class="image-placeholder"></div>
+        <div class="text">
+            <h2>Introduction</h2>
+            <p>I am enrolled in a BA (Hons) program in Visual Communications and Design at South East Technological University, and I also hold a BTEC Level 3 Diploma in Creative Media Production and a Professional Diploma in Graphic Design.</p>
+            <p>Over the past three years of studying Visual Communications, I have acquired various skills, including proficiency in Figma, Adobe Photoshop, InDesign, and XD, as well as web-based languages including HTML, CSS, Javascript, PHP, and MySQL. Additionally, I have experience with Balsamiq and Figma. I have also gained foundational knowledge through an Introduction to Marketing, Marketing Mix, and Marketing Management.</p>
+        </div>
+    </section>
+
+    <section class="interests">
+        <h2>Interests and hobbies</h2>
+        <p>I have a strong interest in design and technology, and I aim to pursue a career in digital design, UI/UX, or web and app design and development. In my free time, I am passionate about and have experience in PC and console gaming.</p>
+        <div class="image-grid">
+            <div class="image-item"></div>
+            <div class="image-item"></div>
+            <div class="image-item"></div>
+        </div>
+    </section>
+
+    <section class="experience">
+        <p><strong>Agency name</strong> <span>2024</span></p>
+        <p><strong>Studio name</strong> <span>2025</span></p>
+        <p><strong>Company name</strong> <span>2021</span></p>
+    </section>
+
+    <footer>
+        </footer>
+</body>
+</html>
