Update contact.html and style.css

--- a/contact.html
+++ b/contact.html
@@ -17,3 +17,37 @@
             </ul>
         </nav>
     </header>
+
+    <section class="contact-info">
+        <h1>Get in Touch</h1>
+        <p>We'd love to hear from you! Here's how you can reach us:</p>
+        <ul>
+            <li>
+                <a href="tel:+353879101235">
+                    <img src="phone-icon.png" alt="Phone"> +353 87 910 1235
+                </a>
+            </li>
+            <li>
+                <a href="mailto:gillespierachel74@gmail.com">
+                    <img src="email-icon.png" alt="Email"> gillespierachel74@gmail.com
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/yourprofile" target="_blank">
+                    <img src="twitter-icon.png" alt="Twitter"> Twitter
+                </a>
+            </li>
+            <li>
+                <a href="https://linkedin.com/in/yourprofile" target="_blank">
+                    <img src="linkedin-icon.png" alt="LinkedIn"> LinkedIn
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/yourprofile" target="_blank">
+                    <img src="github-icon.png" alt="GitHub"> GitHub
+                </a>
+            </li>
+        </ul>
+    </section>
+</body>
+</html>
