--- a/projects.html
+++ b/projects.html
@@ -13,12 +13,12 @@
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <body>
     <div class="container">
         <h1>Portfolio</h1>
         <div class="portfolio-grid">
