--- a/projects.html
+++ b/projects.html
@@ -59,5 +59,17 @@
             <p>Contact me for collaborations or inquiries.</p>
         </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <div class="copyright">
+                <span class="logo-symbol"></span> © 2025 Rachel Gillespie. All rights reserved.
+            </div>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/rachelgillespie/" target="_blank"><span class="linkedin-icon"></span></a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
