--- a/contact.html
+++ b/contact.html
@@ -50,5 +50,17 @@
             </li>
         </ul>
     </section>
+    <footer>
+        <div class="footer-content">
+            <div class="copyright">
+                <span class="logo-symbol"></span> © 2025 Rachel Gillespie. All rights reserved.
+            </div>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/rachelgillespie/" target="_blank"><span class="linkedin-icon"></span></a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
