Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rachel Gillespie - Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-    @import url('https://fonts.googleapis.com/css2?family=Notable&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
-    </style>
+    <script src="https://kit.fontawesome.com/bd3a3d372a.js" crossorigin="anonymous"></script>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Notable&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap'); </style>
 </head>
 <body>
     <header>
@@ -57,12 +56,12 @@
 <footer>
     <div class="footer-content">
         <div class="footer-logo">
-            <span class="logo-icon">&#10022;</span> 
-        </div>
+    <i class="fas fa-star"></i> </div>
         <p>&copy; <span id="current-year"></span> Rachel Gillespie. All rights reserved.</p>
         <div class="social-links">
-            <a href="#" target="_blank" aria-label="LinkedIn Profile"><span class="linkedin-icon">&#xe901;</span></a> 
-        </div>
+    <a href="https://www.linkedin.com/in/rachelgillespie/" target="_blank" aria-label="LinkedIn Profile">
+        <i class="fab fa-linkedin"></i> </a>
+    </div>
     </div>
 </footer>
 
