--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
         <div class="social-links">
     <a href="https://www.linkedin.com/in/rachelgillespie/" target="_blank" aria-label="LinkedIn Profile">
         <i class="fab fa-linkedin"></i> </a>
+        <a href="https://github.com/rachel-gillespie" target="_blank" aria-label="GitHub Profile">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.instagram.com/rachelg.design/" target="_blank" aria-label="Instagram Profile">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.flickr.com/photos/202202748@N03/" target="_blank" aria-label="Flickr Profile">
+                <i class="fab fa-flickr"></i>
+            </a>
     </div>
     </div>
 </footer>
