--- a/about.html
+++ b/about.html
@@ -58,16 +58,16 @@
             <div class="content-wrapper">
                 <h2>Experience</h2>
                 <div class="experience-item">
-                    <h3>Agency name</h3>
-                    <span>2024</span>
+                    <h3>South East Technological University</h3>
+                    <span>2022-2026</span>
                 </div>
                 <div class="experience-item">
-                    <h3>Studio name</h3>
-                    <span>2023</span>
+                    <h3>UCD Professional Academy</h3>
+                    <span>2022</span>
                 </div>
                 <div class="experience-item">
-                    <h3>Company name</h3>
-                    <span>2021</span>
+                    <h3>Ballyfermot College of Further Education</h3>
+                    <span>2018-2019</span>
                 </div>
             </div>
         </section>
