Update portfolio.html and style.css

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,73 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rachel Gillespie</title>
+    <title>Rachel Gillespie - Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/bd3a3d372a.js" crossorigin="anonymous"></script>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Notable&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap'); </style>
 </head>
 <body>
     <header>
-        <div class="logo">Rachel Gillespie</div>
         <nav>
+            <div class="logo">
+                <a href="index.html">Rachel Gillespie</a>
+            </div>
             <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <div class="container">
-        <h1>Portfolio</h1>
-        <div class="portfolio-grid">
-            <div class="grid-item">
-                <img src="image1.jpg" alt="Project 1">
-                <h3>Project Title 1</h3>
-                <p>A brief description of the project.</p>
-            </div>
-            <div class="grid-item">
-                <img src="image2.jpg" alt="Project 2">
-                <h3>Project Title 2</h3>
-                 <p>A brief description of the project.</p>
-            </div>
-             <div class="grid-item">
-                <img src="image3.jpg" alt="Project 3">
-                <h3>Project Title 3</h3>
-                <p>A brief description of the project.</p>
-            </div>
-            <div class="grid-item">
-                <img src="image4.jpg" alt="Project 4">
-                <h3>Project Title 4</h3>
-                <p>A brief description of the project.</p>
-            </div>
-            <div class="grid-item">
-                 <img src="image5.jpg" alt="Project 5">
-                <h3>Project Title 5</h3>
-                <p>A brief description of the project.</p>
-            </div>
-            <div class="grid-item">
-                <img src="image6.jpg" alt="Project 6">
-                <h3>Project Title 6</h3>
-                <p>A brief description of the project.</p>
-            </div>
-        </div>
+    <main class="portfolio-page">
+        <section class="page-intro">
+            <h1>Portfolio</h1>
+        </section>
 
-        <div class="reach-out">
-            <h2>Reach out</h2>
-            <p>Contact me for collaborations or inquiries.</p>
-        </div>
-    </div>
+        <section class="projects-grid-section">
+            <div class="content-wrapper">
+                <div class="projects-grid">
+                    <a href="#" class="project-item">
+                        <div class="project-image project-image-1"></div>
+                        <div class="project-info">
+                            <h3>Dublin Climbers and Mountaineers Brand Re-Design</h3>
+                            <span>2025</span>
+                        </div>
+                    </a>
+                    <a href="#" class="project-item">
+                        <div class="project-image project-image-2"></div>
+                        <div class="project-info">
+                            <h3>Typo Magazine</h3>
+                            <span>2025</span>
+                        </div>
+                    </a>
+                    <a href="#" class="project-item">
+                        <div class="project-image project-image-3"></div>
+                        <div class="project-info">
+                            <h3>Badger Whiskey</h3>
+                            <span>2025</span>
+                        </div>
+                    </a>
+                    <a href="#" class="project-item">
+                        <div class="project-image project-image-4"></div>
+                        <div class="project-info">
+                            <h3>The Smiths Album and Single Cover</h3>
+                            <span>2025</span>
+                        </div>
+                    </a>
+                    <a href="#" class="project-item">
+                        <div class="project-image project-image-5"></div>
+                        <div class="project-info">
+                            <h3>Bird Watching App</h3>
+                            <span>2025</span>
+                        </div>
+                    </a>
+                    <a href="#" class="project-item">
+                        <div class="project-image project-image-6"></div>
+                        <div class="project-info">
+                            <h3>SETU Swap and Sell App</h3>
+                            <span>2025</span>
+                        </div>
+                    </a>
+                    <a href="#" class="project-item">
+                        <div class="project-image project-image-7"></div>
+                        <div class="project-info">
+                            <h3>Just Eat App Re-Design</h3>
+                            <span>2025</span>
+                        </div>
+                    </a>
+                    <a href="#" class="project-item">
+                        <div class="project-image project-image-8"></div>
+                        <div class="project-info">
+                            <h3>Coffee Information Poster</h3>
+                            <span>2025</span>
+                        </div>
+                    </a>
+                    <a href="#" class="project-item">
+                        <div class="project-image project-image-9"></div>
+                        <div class="project-info">
+                            <h3>Bauhaus Poster</h3>
+                            <span>2025</span>
+                        </div>
+                    </a>
+                    <a href="#" class="project-item">
+                        <div class="project-image project-image-10"></div>
+                        <div class="project-info">
+                            <h3>Another project</h3>
+                            <span>2025</span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section class="design-philosophy-contact-section">
+            <div class="content-wrapper">
+                <div class="design-philosophy">
+                    <h2>My design philosophy</h2>
+                    <p>Red and every portfolio is a point of view. A good project management, in the end, is a matter of understanding the person behind the work. Is it a particular article you are keen on? Are there any specific thoughts or philosophies all these. Things to be the way they are?</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <footer>
         <div class="footer-content">
-            <div class="copyright">
-                <span class="logo-symbol"></span> © 2025 Rachel Gillespie. All rights reserved.
-            </div>
+            <div class="footer-logo">
+        <i class="fas fa-star"></i> </div>
+            <p>&copy; <span id="current-year"></span> Rachel Gillespie. All rights reserved.</p>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/rachelgillespie/" target="_blank"><span class="linkedin-icon"></span></a>
-            </div>
+        <a href="https://www.linkedin.com/in/rachelgillespie/" target="_blank" aria-label="LinkedIn Profile">
+            <i class="fab fa-linkedin"></i> </a>
+            <a href="https://github.com/rachel-gillespie" target="_blank" aria-label="GitHub Profile">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.instagram.com/rachelg.design/" target="_blank" aria-label="Instagram Profile">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.flickr.com/photos/202202748@N03/" target="_blank" aria-label="Flickr Profile">
+                    <i class="fab fa-flickr"></i>
+                </a>
+        </div>
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
