update project-template.html and style.css and portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
         <section class="projects-grid-section">
             <div class="content-wrapper">
                 <div class="projects-grid">
-                    <a href="#" class="project-item">
+                    <a href="project-template.html" class="project-item">
                         <div class="project-image project-image-1"></div>
                         <div class="project-info">
                             <h3>Dublin Climbers and Mountaineers Brand Re-Design</h3>
